--- a/PRAGolf/templates/base.html.twig
+++ b/PRAGolf/templates/base.html.twig
@@ -1,12 +1,102 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Helios by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+	<head>
+		<title>Referee Helper | {% block title %}{% endblock %}</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="{{  asset('assets/css/main.css') }}" />
+		<noscript><link rel="stylesheet" href="{{ asset('assets/css/noscript.css') }}" /></noscript>
+	</head>
+	<body class="homepage is-preload">
+		<div id="page-wrapper">
+
+			<!-- Header -->
+				<div id="header">
+
+					<!-- Inner -->
+						<div class="inner">
+							<header>
+								<h1><a href="index.html" id="logo">Referee Helper</a></h1>
+								<hr />
+								<p>L'application indispensable aux arbitres de golf</p>
+							</header>
+							<footer>
+								<a href="#banner" class="button circled scrolly">Start</a>
+							</footer>
+						</div>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="no-sidebar.html">A propos</a></li>
+								<li><a href="no-sidebar.html">Mon compte</a></li>
+							</ul>
+						</nav>
+
+				</div>
+
+			<!-- Banner -->
+				<section id="banner">
+					<header>
+						<h2>Bonjour. Vous utilisez <strong>Referee Helper</strong>.</h2>
+						<p>
+							Une application simple et rapide pour les arbitres de golf, permettant la création de cadence de jeu.
+						</p>
+					</header>
+					<form method="post" action="#"></form>
+					<div class="fields">
+						<div class="field">
+							<label for="lieu">Lieu</label>
+							<input id="lieu" type="text" name="lieu" required>
+						</div>
+					</div>
+					<div class="field">
+						<label for="start">Start</label>
+						<input id="start" type="time" name="start" min="07:00" max="10:00" required>
+					</div>
+					<div class="field">
+						<label for="fichier">Choisir votre fichier excel:</label>
+						<input id="fichier" type="file" name="fichier" accept=".xlsx,xls">
+					</div>
+					<ul class="actions">
+						<li>
+							<input type="submit" value="Envoyer">
+						</li>
+					</ul>
+				</section>
+
+			<!-- Footer -->
+				<div id="footer">
+					<div class="container">
+						<div class="row">
+								<!-- Copyright -->
+									<div class="copyright">
+										<ul class="menu">
+											<li>&copy; FKSM. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+										</ul>
+									</div>
+
+							</div>
+
+						</div>
+					</div>
+				</div>
+
+		<!-- Scripts -->
+			<script src="{{ asset('assets/js/jquery.min.js') }}"></script>
+			<script src="{{ asset('assets/js/jquery.dropotron.min.js') }}"></script>
+			<script src="{{ asset('assets/js/jquery.scrolly.min.js') }}"></script>
+			<script src="{{ asset('assets/js/jquery.scrollex.min.js') }}"></script>
+			<script src="{{ asset('assets/js/browser.min.js') }}"></script>
+			<script src="{{ asset('assets/js/breakpoints.min.js') }}"></script>
+			<script src="{{ asset('assets/js/util.js') }}"></script>
+			<script src="{{ asset('assets/js/main.js') }}"></script>
+
+	</body>
 </html>
