--- a/PRAGolf/templates/base.html.twig
+++ b/PRAGolf/templates/base.html.twig
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Referee Helper</a></h1>
+								<h1><a href="/index" id="logo">Referee Helper</a></h1>
 								<hr />
 								<p>L'application indispensable aux arbitres de golf</p>
 							</header>
@@ -33,9 +33,9 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="no-sidebar.html">A propos</a></li>
-								<li><a href="no-sidebar.html">Mon compte</a></li>
+								<li><a href="index">Home</a></li>
+								<li><a href="#">A propos</a></li>
+								<li><a href="#">Mon compte</a></li>
 							</ul>
 						</nav>
 
@@ -50,25 +50,19 @@
 						</p>
 					</header>
 					<form method="post" action="#"></form>
-					<div class="fields">
-						<div class="field">
-							<label for="lieu">Lieu</label>
-							<input id="lieu" type="text" name="lieu" required>
+					{#<div class="fields">#}
+						{#<div class="field">#}
+							{#<label for="lieu">Lieu</label>#}
+							{#<input id="lieu" type="text" name="lieu" required>#}
+						{#</div>#}
+					{#</div>#}
+					{#<div class="field">#}
+						{#<label for="start">Start</label>#}
+						{#<input id="start" type="time" name="start" min="07:00" max="10:00" required>#}
+					{#</div>#}
+						<div class="" style="width:25%;margin:auto;">
+						{% block form %}{% endblock %}
 						</div>
-					</div>
-					<div class="field">
-						<label for="start">Start</label>
-						<input id="start" type="time" name="start" min="07:00" max="10:00" required>
-					</div>
-					<div class="field">
-						<label for="fichier">Choisir votre fichier excel:</label>
-						<input id="fichier" type="file" name="fichier" accept=".xlsx,xls">
-					</div>
-					<ul class="actions">
-						<li>
-							<input type="submit" value="Envoyer">
-						</li>
-					</ul>
 				</section>
 
 			<!-- Footer -->
