--- a/PRAGolf/templates/cadence_de_jeu/index.html.twig
+++ b/PRAGolf/templates/cadence_de_jeu/index.html.twig
@@ -1,4 +1,109 @@
-{{ dump(contenu) }}
-{% for i in 0..nbJoueurs %}
-    i
-{% endfor %}
+{% block body %}
+    <style>
+        table {
+            border: 1px solid black;
+            border-collapse: collapse;
+            width: 100%;
+            text-align: center;
+            padding: 0;
+        }
+
+        td {
+            padding: 0;
+            font-size: 9px;
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+
+        .thead {
+            font-size: 9px;
+            background-color: #136DFF;
+            width: 4.2%;
+        }
+    </style>
+    {# calcul du nb de joueurs total selon le multitableau reçu #}
+    {% set n = 0 %}
+    {% for noms in contenu %}
+        {% for player in noms %}
+            {% for j in player %}
+                {% set n = n + 1 %}
+            {% endfor %}
+        {% endfor %}
+    {% endfor %}
+    {#{{ dump(parties) }}#}
+    <div class="container-fluid" style="font-size: 11px">
+        {% set h = 7 %}
+        {% set m = 30 %}
+        {% set cadence = 11 %}
+        <table class="table">
+            <tr>
+                <th class="thead">
+                    n°
+                </th>
+                <th class="thead">
+                    Départ
+                </th>
+                <th class="thead">
+                    Joueurs
+                </th>
+                <th class="thead">
+                    Couleur
+                </th>
+                {% for j in range(1,18) %}
+                    <th class="thead">
+                        {{ j }}
+                    </th>
+                {% endfor %}
+            </tr>
+            {% for partie in contenu %}
+                <tr>
+                    <td>
+                        #
+                    </td>
+                    <td>
+                        {{ h }}:{{ m }}
+                    </td>
+
+                    <td>
+                        {% for joueur in partie[1] %}
+                            {{ joueur }}<br>
+                        {% endfor %}
+                    </td>
+
+                    <td>
+                        {{ partie[0] }}
+                    </td>
+                    {% set min = m %}
+                    {% set heur = h %}
+                    {% for i in range(0, 17) %}
+                        {% set min = trous[i] + min %}
+                        {% if (min > 59) %}
+                            {% set heur = heur + 1 %}
+                            {% set min = min - 60 %}
+                            {% if (min < 10) %}
+                                {% set min = '0' ~ min %}
+                            {% endif %}
+                        {% endif %}
+                        <td>
+                            {{ heur }}:{{ min }}
+                        </td>
+                    {% endfor %}
+
+                </tr>
+                {% set m = m + cadence %}
+                {% if (m > 59) %}
+                    {% set h = h + 1 %}
+                    {% set m = m - 60 %}
+                    {% if (m < 10) %}
+                        {% set m = '0' ~ m %}
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+            <br>
+        </table>
+
+        {#<a href="{{ path('pdf') }}" target="_blank" class="btn btn-outline-info"> VALIDER </a>#}
+        {#<a href="{{ path('remove') }}" class="btn btn-outline-danger"> ANNULER </a>#}
+    </div>
+
+{% endblock %}
